--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-app",
-  "homepage": "https://EshanB101.github.io/my-app",
+  "homepage": "https://EshanB101.github.io/React-Eshan",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
